<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.TestStartFragment">

    <TextView
        android:id="@+id/textViewSubjectNameStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/subjectName"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSubjectDeclaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/testDeclaration"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubjectNameStart" />

    <Button
        android:id="@+id/buttonStartTest"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:text="@string/startTest"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubjectDeclaration" />

    <Button
        android:id="@+id/buttonShowResultsStart"
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#04B100"
        android:text="@string/showAllTestResults"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartTest" />

</androidx.constraintlayout.widget.ConstraintLayout>